# FastMCP

./: .env.example  pyproject.toml
app/: config.py  main.py
app/model/: member_model.py
app/routes/: member.py
app/services/: member_service.py
app/utils/: nip_helper.py
ui/: package.json
ui/src/: App.jsx
ui/src/components/: Chatbot.jsx
